--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "colorette": "^2.0.20",
     "commander": "^2.20.3",
     "cross-spawn": "^7.0.3",
+    "dotenv": "^16.3.1",
     "electron-to-chromium": "^1.4.575",
     "enhanced-resolve": "^5.15.0",
     "envinfo": "^7.11.0",
@@ -91,7 +92,6 @@
     "which": "^2.0.2",
     "wildcard": "^2.0.1"
   },
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --mode production"
