--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "electron-to-chromium": "^1.4.575",
     "enhanced-resolve": "^5.15.0",
     "envinfo": "^7.11.0",
+    "envy": "^2.0.0",
     "es-module-lexer": "^1.3.1",
     "escalade": "^3.1.1",
     "eslint-scope": "^5.1.1",
@@ -97,5 +98,8 @@
     "build": "webpack --mode production"
   },
   "author": "Aditya Mali",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "dotenv-webpack": "^8.0.1"
+  }
 }
